package s191220119.task2.src;

import s191220119.task2.src.Matrix.Position;

public interface Element {
    
    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();
    
}
